--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    
     background: url(back.webp) no-repeat;
     background-size: cover;
 }
+
 
 a {
     text-decoration: none;
@@ -19,17 +19,17 @@ a {
 }
 
 .sidebar{
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: 10px;
     height: 90vh;
     left: -200px;
-    background: #042331;
+    background: #071012;
     width: 180px;
     overflow: hidden;
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1); 
     transition: all .5s ease; 
     flex-wrap: wrap;
-    z-index: 100;
+    z-index: 1;
 }
 
 .sidebar header img{
@@ -163,10 +163,7 @@ header {
     padding: 10px 0;
 }
 
-.container {
-    width: 90%;
-    margin: 0 auto;
-}
+
 
 nav {
     display: flex;
@@ -250,6 +247,10 @@ main {
 .referrals{
     background: url(referals.jpeg) no-repeat;
     background-size: cover;  
+}
+.forex{
+    background: url(winbig.jpeg) no-repeat;
+    background-size: cover;
 }
 /* Account Page Styles */
 .account-info {
@@ -338,7 +339,7 @@ main {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
