--- a/kencoin.css
+++ b/kencoin.css
@@ -1,4 +1,7 @@
 /* Global Styles */
+*{
+    user-select: none ;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -15,17 +18,20 @@ header {
     background-color: #333;
     color: white;
     padding: 10px 0;
-    text-align: center;
+    text-align: cent;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
     align-items: center;
+    justify-content: space-between;
 }
 
 header .logo h1 {
     margin: 0;
     padding-left: 20px;
 }
+nav{
 
+}
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -34,7 +40,7 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 20px;
+    margin-right: 1px;
 }
 
 nav ul li a {
@@ -52,6 +58,10 @@ nav ul li a:hover {
 main {
     padding: 20px;
     text-align: center;
+}
+main h2{
+    font-weight: 600;
+    font-size: 24px;
 }
 
 .button-container {
@@ -85,13 +95,28 @@ main {
     margin-top: 20px;
 }
 
-.machine {
-    background-color: #fff;
-    padding: 20px;
+.machine{
+    background-color: #063c93;
+    padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 200px;
+    width: 100px;
+    height: 150px;
     text-align: center;
+}
+.machine img{
+    width: 100%;
+    height: 50%;
+}
+.machine h3{
+    margin: 0;
+    font-size: 16px;
+    color: #f0f0f0;
+}
+.machine p{
+    color: #f1f10d;
+    font-weight: 500;
+    margin: 0;
 }
 
 .machine button {
@@ -102,47 +127,73 @@ main {
     cursor: pointer;
     padding: 10px 20px;
     transition: background-color 0.3s ease;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .machine button:hover {
-    background-color: #45a049;
+    background-color: #616761;
 }
 
 .cart {
-    margin-top: 40px;
+    top: 0;
+    right: 0;
+    position: absolute;
     background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
+    border-radius: 50%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: 0 auto;
+    width: 80px;
+    height: 80px;
     text-align: center;
 }
-
+.cart h3{
+    padding: 0;
+    margin: 0,0 ,0;
+    color: red;
+    font-size: 12px;
+    font-weight: 600;
+    align-items: center;
+    text-align: center;
+}
+.cart ul{
+    display: none;
+}
+.cart p{
+    margin: 10px;
+    border-radius: 50%;
+    background-color: #f1f10d;
+    padding: 0;
+    
+}
+.cart p span{
+    font-size: 10px;
+    font-weight: 600;
+    color: red;
+}
 .cart button {
     background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 5px 5px;
     transition: background-color 0.3s ease;
-    font-size: 16px;
-    margin-top: 20px;
+    font-size: 12px;
+    font-weight: 600;
+    margin: 0;
 }
 
 .cart button:hover {
-    background-color: #45a049;
+    background-color: #b5c9b6;
 }
 
 .cart ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 .cart ul li {
-    margin-bottom: 10px;
+    margin-bottom: 1px;
 }
 
 /* Footer Styles */
